# kauffman-polynomial

./: .gitignore  NOTES.md  README.md  check_knotinfo.py  cli.py  codes.py  codes_test.py  generic_skein_algorithm.py  generic_skein_algorithm_test.py  graphs.py  homfly.py  homfly_test.py  kauffman.py  kauffman_cli.py  kauffman_closed_test.py  kauffman_test.py  kauffman_v2.py  kauffman_v2_example_large.py  kauffman_v2_knotinfo_test.py  kauffman_v2_test.py  polynomial_commons.py  polynomials.py  pyproject.toml  raw.py  utils.py
.github/workflows/: pytest.yml  test-polynomials.yml  typst-report.yml
equation_dsl/: __init__.py  equation_dsl.py  equation_dsl_test.py  skein_dsl_test.py
old/: kauffman_closed.py  kauffman_closed_test.py
report/: README.md  main.typ  refs.bib  theme.typ
report/assets/: times-knots.json  times-links.json
