[project]
name = "kauffman_polynomial"
version = "0.1.0"
description = "A Python package for computing polynomials invariants of knots and links."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "database-knotinfo>=2024.12.1",
    "pytest>=8.3.5",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]
